# ntx

./: Cargo.toml  README.md  demo.tape
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: session.rs  terminal.rs
ntx/src/: main.rs
ntx/src/quickstart/: 4-your-projects.md  default.conf
rbk/: Cargo.toml
rbk/src/: app.rs  config.rs  main.rs  notes.rs  paths.rs  ui.rs
rbk/src/quickstart/: 1-welcome.md  3-code-blocks.md  4-your-projects.md  default.conf
